--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="title" content="Salesforce Developer and Demo Orgs">
+    <meta name="description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
+    <meta name="keywords" content="Salesforce developer orgs, Salesforce demo orgs, sandbox environments, Salesforce testing, learn Salesforce, Salesforce editions, developer tools, Salesforce training">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Salesforcetroop">
+   <meta property="og:type" content="website">
+<meta property="og:url" content="https://salesforcetroop.com">
+<meta property="og:title" content="Salesforce Developer and Demo Orgs">
+<meta property="og:description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
+<meta property="og:image" content="%PUBLIC_URL%/website.png">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +33,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/design-system/2.21.1/styles/salesforce-lightning-design-system.min.css"/>
+    <title>Salesforce Orgs List</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
