--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="language" content="English">
     <meta name="author" content="Salesforcetroop">
    <meta property="og:type" content="website">
-<meta property="og:url" content="https://salesforcetroop.com">
+<meta property="og:url" content="https://salesforceorgs.netlify.app/">
 <meta property="og:title" content="Salesforce Developer and Demo Orgs">
 <meta property="og:description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
 <meta property="og:image" content="%PUBLIC_URL%/website.png">
