--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,30 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" content="Salesforce Developer and Demo Orgs">
-    <meta name="description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
+    <meta name="title" content="Salesforce Demo Orgs List">
+    <meta name="description" content="Discover a comprehensive list of Salesforce Demo Orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
     <meta name="keywords" content="Salesforce developer orgs, Salesforce demo orgs, sandbox environments, Salesforce testing, learn Salesforce, Salesforce editions, developer tools, Salesforce training">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="Salesforcetroop">
-   <meta property="og:type" content="website">
+
+    <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
 <meta property="og:url" content="https://salesforceorgs.netlify.app/">
-<meta property="og:title" content="Salesforce Developer and Demo Orgs">
+<meta property="og:title" content="Salesforce Demo Orgs List">
 <meta property="og:description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
 <meta property="og:image" content="%PUBLIC_URL%/website.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://salesforceorgs.netlify.app/">
+<meta property="twitter:title" content="Salesforce Demo Orgs List">
+<meta property="twitter:description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
+<meta property="twitter:image" content="%PUBLIC_URL%/website.png">
+
+
+
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
