--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://salesforceorgs.netlify.app/">
 <meta property="twitter:title" content="Salesforce Demo Orgs List">
-<meta property="twitter:description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
+<meta property="twitter:description" content="Discover a comprehensive list of Salesforce Demo Orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
 <meta property="twitter:image" content="%PUBLIC_URL%/website.png">
 
 
@@ -24,7 +24,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://salesforceorgs.netlify.app/">
 <meta property="og:title" content="Salesforce Demo Orgs List">
-<meta property="og:description" content="Discover a comprehensive list of Salesforce developer and demo orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
+<meta property="og:description" content="Discover a comprehensive list of Salesforce Demo Orgs, offering the ideal sandbox environments for testing and learning. Explore our curated collection of orgs, featuring various editions and functionalities.">
 <meta property="og:image" content="%PUBLIC_URL%/website.png">
 
 
@@ -65,3 +65,9 @@
     -->
   </body>
 </html>
+I have built a website that showcases a  list of Salesforce demo orgs.  https://salesforceorgs.netlify.app
+
+@sfindiadreamin
+
+@salesforce
+#sfdc #trailhead #learning #Ohana #CRM #Admin 
